--- a/start/02-04-forms.html
+++ b/start/02-04-forms.html
@@ -7,6 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Forms</title>
 </head>
+  <form action="" method="post">
+    <label for="full-name">Full Name</label>
+    <br>
+    <input type="text" id="full-name" placeholder="Emma Bostian">
+    <br>
+
+    <label for="email">Email Adress</label>
+    <br>
+    <input type="email" id="email" placeholder="bostian@gmail.com">
+    <br>
+
+    <label for="telephone">Phone Number</label>
+    <br>
+    <input type="tell" id="telephone" placeholder="845-111-662">
+    <br>
+
+    <label for="date">Date</label>
+    <br>
+    <input type="date" id="date">
+    <br>
+
+    <label for="num-guests">Number Of Guests</label>
+    <br>
+    <select name="num-guests" id="num-guests">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+    </select>
+    <br>
+
+    <button type="submit">Submit</button>
+  </form>
 <body>
 </body>
 
