--- a/start/04-03-create-an-office-hours-schedule.html
+++ b/start/04-03-create-an-office-hours-schedule.html
@@ -9,7 +9,56 @@
 </head>
 
 <body>
-  
+  <table>    
+    <tr>
+      <td></td>
+      <th scope="col">Monday</th>
+      <th scope="col">Tuesday</th>
+      <th scope="col">Wednesday</th>
+      <th scope="col">Thursday</th>
+      <th scope="col">Friday</th>
+    </tr>
+    <tr>
+      <th scope="row">09:00 to 11:00</td>
+      <td>Open</td>
+      <td>Closed</td>
+      <td>Open</td>
+      <td>Closed</td>
+      <td>Open</td>
+    </tr>
+    <tr>
+      <th scope="row">11:00 to 12:00</td>
+      <td>Closed</td>
+      <td>Open</td>
+      <td>Closed</td>
+      <td>Open</td>
+      <td>Open</td>
+    </tr>
+    <tr>
+      <th scope="row">12:00 to 14:00</td>
+      <td>Open</td>
+      <td>Closed</td>
+      <td>Open</td>
+      <td>Closed</td>
+      <td>Open</td>
+    </tr>
+    <tr>
+      <th scope="row">14:00 to 16:00</td>
+      <td>Open</td>
+      <td>Open</td>
+      <td>Open</td>
+      <td>Open</td>
+      <td>Closed</td>
+    </tr>
+    <tr>
+      <th scope="row">16:00 to 18:00</td>
+      <td>Closed</td>
+      <td>Open</td>
+      <td>Closed</td>
+      <td>Open</td>
+      <td>Closed</td>
+    </tr>    
+  </table>
 </body>
 
 </html>
